--- a/org/3_raw_data_practice.org
+++ b/org/3_raw_data_practice.org
@@ -1,7 +1,7 @@
 #+TITLE:Practice: Raw data and variables
 #+AUTHOR: [YourName]
 #+SUBTITLE: Applied math for data science (DSC 482/MTH 445) Fall 2022
-#+OPTIONS: toc:nil num:nil ^:nil
+#+OPTIONS: toc:1 num:1 ^:nil
 * README
 
   - Practice for "Raw data and statistical variables" ([[https://github.com/birkenkrahe/dsmath/blob/main/org/3_raw_data.org][GitHub]])
