--- a/org/4_summary_stats.org
+++ b/org/4_summary_stats.org
@@ -7,11 +7,11 @@
 #+caption: poster for "The Terminal List" (Amazon, 2022-).
 [[../img/4_terminallist.jpg]]
 
-- Centrality: Mean, Median, Mode
+- Centrality: ~mean~, ~median~, mode
 - Counts, Percentages, and Proportions
-- Quantiles, Percentiles, and 5-number-summary
-- Spread: Variance, Standard Deviation and Interquartile Range
-- 2 Practice exercises and 1 exercise session
+- Contingency tables with ~table~ and ~prop.table~
+- ~apply~ family of functions
+- Rounding data with ~round~
 
 * Measures of centrality
 #+attr_html: :width 600px
@@ -498,7 +498,7 @@ t-th smallest observation regardless of the observation index i.
 [[../img/w6_gnome_exercising.jpg]]
 
 - Download practice file [[https://raw.githubusercontent.com/birkenkrahe/dsmath/main/org/4_summary_stats_practice.org][from GitHub]] and save as Org-mode file
-- Submit completed Org-mode file [[https://lyon.instructure.com/courses/655/assignments/2886][to Canvas]] by Thursday, 22-Sept, 8 am
+- Submit completed Org-mode file [[https://lyon.instructure.com/courses/655/assignments/2886][to Canvas]] by Monday, 26-Sept, 8 am
 
 * TODO Glossary: concepts
 
