--- a/org/4_summary_stats_practice.org
+++ b/org/4_summary_stats_practice.org
@@ -41,9 +41,9 @@ used on each unit.
 Study the help file to get an idea of R's representation of the two
 variables:
 
-- Variable ??? is a ??? variable
+- Variable ??? is a ??? variable stored as ??? and represents ???
 
-- Variable ??? is a ??? variable ???
+- Variable ??? is a ??? variable ??? stored as ??? and represents ???
 
 * TODO Mode
 
